fix kara buttons not working and cramped world

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ div{
 }
 
 #world-panel {
+	min-width: 428px;
 	margin-right: 20px;
 }
 
